fix align on recetas title

--- a/src/components/bigCard/bigCard.scss
+++ b/src/components/bigCard/bigCard.scss
@@ -5,7 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   border-radius: 4px;
   padding: 8px;
+  .photo {
+    align-self: center;
+  }
 }
